twenty-sixth step to new crm